--- a/public/index.html
+++ b/public/index.html
@@ -30,45 +30,45 @@
       <div id="bg" class="tabcontent">
         <div class="myGallery">
           <a href="#" onclick="changeBg(event, '/images/no.svg')"><img src="/images/no.svg" alt="option: nothing" /></a>
-          <img src="/images/bg/bg0.png" alt="background option 0" />
-          <img src="/images/bg/bg1.png" alt="background option 1" />
-          <img src="/images/bg/bg2.png" alt="background option 2" />
-          <img src="/images/bg/bg3.png" alt="background option 3" />
-          <img src="/images/bg/bg4.png" alt="background option 4" />
+          <a href="#" onclick="changeBg(event, '/images/bg/bg0.png')"><img src="/images/bg/bg0.png" alt="background option 0" /></a>
+          <a href="#" onclick="changeBg(event, '/images/bg/bg1.png')"><img src="/images/bg/bg1.png" alt="background option 1" /></a>
+          <a href="#" onclick="changeBg(event, '/images/bg/bg2.png')"><img src="/images/bg/bg2.png" alt="background option 2" /></a>
+          <a href="#" onclick="changeBg(event, '/images/bg/bg3.png')"><img src="/images/bg/bg3.png" alt="background option 3" /></a>
+          <a href="#" onclick="changeBg(event, '/images/bg/bg4.png')"><img src="/images/bg/bg4.png" alt="background option 4" /></a>
         </div>
       </div>
 
       <div id="outfit" class="tabcontent">
         <div class="myGallery" id="outfitGallery">
           <img src="/images/no.svg" alt="option: nothing" class="nullImg" />
-          <img src="/images/outfits/o0.png" alt="outfits option 0" />
-          <img src="/images/outfits/o1.png" alt="outfits option 1" />
-          <img src="/images/outfits/o2.png" alt="outfits option 2" />
-          <img src="/images/outfits/o3.png" alt="outfits option 3" />
-          <img src="/images/outfits/o4.png" alt="outfits option 4" />
-          <img src="/images/outfits/o5.png" alt="outfits option 5" />
+          <a href="#" onclick="changeOutfit(event, '/images/outfits/o0.png')"><img src="/images/outfits/o0.png" alt="outfits option 0" /></a>
+          <a href="#" onclick="changeOutfit(event, '/images/outfits/o1.png')"><img src="/images/outfits/o1.png" alt="outfits option 1" /></a>
+          <a href="#" onclick="changeOutfit(event, '/images/outfits/o2.png')"><img src="/images/outfits/o2.png" alt="outfits option 2" /></a>
+          <a href="#" onclick="changeOutfit(event, '/images/outfits/o3.png')"><img src="/images/outfits/o3.png" alt="outfits option 3" /></a>
+          <a href="#" onclick="changeOutfit(event, '/images/outfits/o4.png')"><img src="/images/outfits/o4.png" alt="outfits option 4" /></a>
+          <a href="#" onclick="changeOutfit(event, '/images/outfits/o5.png')"><img src="/images/outfits/o5.png" alt="outfits option 5" /></a>
         </div>
       </div>
 
       <div id="acc" class="tabcontent">
         <div class="myGallery">
           <img src="/images/no.svg" alt="option: nothing" />
-          <img src="/images/extra/a0.png" alt="accessory option 0" />
-          <img src="/images/extra/a1.png" alt="accessory option 1" />
-          <img src="/images/extra/a2.png" alt="accessory option 2" />
-          <img src="/images/extra/a3.png" alt="accessory option 3" />
-          <img src="/images/extra/a4.png" alt="accessory option 4" />
-          <img src="/images/extra/a5.png" alt="accessory option 5" />
-          <img src="/images/extra/a6.png" alt="accessory option 6" />
+          <a href="#" onclick="changeExtra(event, '/images/extra/a0.png')"><img src="/images/extra/a0.png" alt="accessory option 0" /></a>
+          <a href="#" onclick="changeExtra(event, '/images/extra/a1.png')"><img src="/images/extra/a1.png" alt="accessory option 1" /></a>
+          <a href="#" onclick="changeExtra(event, '/images/extra/a2.png')"><img src="/images/extra/a2.png" alt="accessory option 2" /></a>
+          <a href="#" onclick="changeExtra(event, '/images/extra/a3.png')"><img src="/images/extra/a3.png" alt="accessory option 3" /></a>
+          <a href="#" onclick="changeExtra(event, '/images/extra/a4.png')"><img src="/images/extra/a4.png" alt="accessory option 4" /></a>
+          <a href="#" onclick="changeExtra(event, '/images/extra/a5.png')"><img src="/images/extra/a5.png" alt="accessory option 5" /></a>
+          <a href="#" onclick="changeExtra(event, '/images/extra/a6.png')"><img src="/images/extra/a6.png" alt="accessory option 6" /></a>
         </div>
       </div>
     </div>
 
     <div class="rightHalf">
-      <div><img src="/images/bg/bg0.png"></div>
-      <div><img src="/images/bunny.png"></div>
-      <div><img src="/images/outfits/o0.png"></div>
-      <div><img src="/images/extra/a0.png"></div>
+      <div><img src="/images/bg/bg0.png" id="bgImg"></div>
+      <div><img src="/images/bunny.png" id="bunnyImg"></div>
+      <div><img src="/images/outfits/o0.png" id="outfitImg"></div>
+      <div><img src="/images/extra/a0.png" id="extraImg"></div>
     </div>
   </div>
 
@@ -91,10 +91,26 @@
     }
 
     function changeBg(event, bgSrc) {
+      event.preventDefault();
       console.log("inside function changebg");
       var bgImg = document.getElementById("bgImg");
       bgImg.src = bgSrc;
     }
+
+    function changeOutfit(event, imgSrc) {
+      event.preventDefault();
+      console.log("inside function changeoutfit");
+      var imgElem = document.getElementById("outfitImg");
+      imgElem.src = imgSrc;
+    }
+
+    function changeExtra(event, imgSrc) {
+      event.preventDefault();
+      console.log("inside function changeExtra");
+      var imgElem = document.getElementById("extraImg");
+      imgElem.src = imgSrc;
+    }
+
   </script>
 </body>
 
