--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
       <div id="bg" class="tabcontent">
         <div class="myGallery">
-          <a href="#" onclick="changeBg(event, '/images/no.svg')"><img src="/images/no.svg" alt="option: nothing" /></a>
+          <a href="#" onclick="changeBg(event, '/images/no.png')"><img src="/images/no.svg" alt="option: nothing" /></a>
           <a href="#" onclick="changeBg(event, '/images/bg/bg0.png')"><img src="/images/bg/bg0.png" alt="background option 0" /></a>
           <a href="#" onclick="changeBg(event, '/images/bg/bg1.png')"><img src="/images/bg/bg1.png" alt="background option 1" /></a>
           <a href="#" onclick="changeBg(event, '/images/bg/bg2.png')"><img src="/images/bg/bg2.png" alt="background option 2" /></a>
@@ -40,7 +40,7 @@
 
       <div id="outfit" class="tabcontent">
         <div class="myGallery" id="outfitGallery">
-          <img src="/images/no.svg" alt="option: nothing" class="nullImg" />
+          <a href="#" onclick="changeOutfit(event, '/images/no.png')"><img src="/images/no.svg" alt="option: nothing" /></a>
           <a href="#" onclick="changeOutfit(event, '/images/outfits/o0.png')"><img src="/images/outfits/o0.png" alt="outfits option 0" /></a>
           <a href="#" onclick="changeOutfit(event, '/images/outfits/o1.png')"><img src="/images/outfits/o1.png" alt="outfits option 1" /></a>
           <a href="#" onclick="changeOutfit(event, '/images/outfits/o2.png')"><img src="/images/outfits/o2.png" alt="outfits option 2" /></a>
@@ -52,7 +52,7 @@
 
       <div id="acc" class="tabcontent">
         <div class="myGallery">
-          <img src="/images/no.svg" alt="option: nothing" />
+          <a href="#" onclick="changeExtra(event, '/images/no.png')"><img src="/images/no.svg" alt="option: nothing" /></a>
           <a href="#" onclick="changeExtra(event, '/images/extra/a0.png')"><img src="/images/extra/a0.png" alt="accessory option 0" /></a>
           <a href="#" onclick="changeExtra(event, '/images/extra/a1.png')"><img src="/images/extra/a1.png" alt="accessory option 1" /></a>
           <a href="#" onclick="changeExtra(event, '/images/extra/a2.png')"><img src="/images/extra/a2.png" alt="accessory option 2" /></a>
