--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <div class="infoContainer">
     <h1>Bunny Dress-Up Game</h1>
   </div>
-  
+
   <div class="gameContainer">
     <div class="leftHalf">
       <ul class="tab">
@@ -90,14 +90,24 @@
     </div>
 
     <div class="rightHalf">
-      <div id="bunnyContainer">
-        <img src="/images/no.png" alt="">
+      <div id="bunnyContainer0">
+        <div id="bunnyContainer1">
+          <img src="/images/no.png" alt="">
+        </div>
+        <div><img src="/images/no.png" id="bgImg"></div>
+        <div><img src="/images/bunny.png" id="bunnyImg"></div>
+        <div><img src="/images/no.png" id="outfitImg"></div>
+        <div><img src="/images/no.png" id="extraImg"></div>
       </div>
-      <div><img src="/images/bg/bg0.png" id="bgImg"></div>
-      <div><img src="/images/bunny.png" id="bunnyImg"></div>
-      <div><img src="/images/outfits/o0.png" id="outfitImg"></div>
-      <div><img src="/images/extra/a0.png" id="extraImg"></div>
-
+    
+      <div id="loadContainer">
+        <h3>My Closet</h3>
+        <div id="closetContainer">
+          <button>click here to save outfit</button>
+          <button>click here to save outfit</button>
+          <button>click here to save outfit</button>
+        </div>
+      </div>
 
     </div>
 
