--- a/public/index.html
+++ b/public/index.html
@@ -94,10 +94,10 @@
         <div id="bunnyContainer1">
           <img src="/images/no.png" alt="">
         </div>
-        <div><img src="/images/no.png" id="bgImg"></div>
-        <div><img src="/images/bunny.png" id="bunnyImg"></div>
-        <div><img src="/images/no.png" id="outfitImg"></div>
-        <div><img src="/images/no.png" id="extraImg"></div>
+        <div><img src="images/no.png" id="bgImg"></div>
+        <div><img src="images/bunny.png" id="bunnyImg"></div>
+        <div><img src="images/no.png" id="outfitImg"></div>
+        <div><img src="images/no.png" id="extraImg"></div>
       </div>
     
       <div id="loadContainer">
