--- a/public/index.html
+++ b/public/index.html
@@ -22,28 +22,28 @@
     <div class="leftHalf">
       <ul class="tab">
         <li><a href="#" class="tablinks" onclick="openCity(event, 'bg')">
-            <img src="/images/icons/background.svg" alt="Backgrounds">
+            <img src="images/icons/background.svg" alt="Backgrounds">
           </a></li>
         <li><a href="#" class="tablinks" onclick="openCity(event, 'outfit')">
-            <img src="/images/icons/outfit.svg" alt="Outfits">
+            <img src="images/icons/outfit.svg" alt="Outfits">
           </a></li>
         <li><a href="#" class="tablinks" onclick="openCity(event, 'acc')">
-            <img src="/images/icons/extra.svg" alt="Accessories">
+            <img src="images/icons/extra.svg" alt="Accessories">
           </a></li>
       </ul>
 
       <div id="bg" class="tabcontent">
         <div class="myGallery">
-          <a href="#" onclick="changeBg(event, '/images/no.png')"><img src="/images/no.svg" alt="option: nothing" /></a>
-          <a href="#" onclick="changeBg(event, '/images/bg/bg0.png')"><img src="/images/bg/bg0.png"
+          <a href="#" onclick="changeBg(event, 'images/no.png')"><img src="/images/no.svg" alt="option: nothing" /></a>
+          <a href="#" onclick="changeBg(event, 'images/bg/bg0.png')"><img src="/images/bg/bg0.png"
               alt="background option 0" /></a>
-          <a href="#" onclick="changeBg(event, '/images/bg/bg1.png')"><img src="/images/bg/bg1.png"
+          <a href="#" onclick="changeBg(event, 'images/bg/bg1.png')"><img src="/images/bg/bg1.png"
               alt="background option 1" /></a>
-          <a href="#" onclick="changeBg(event, '/images/bg/bg2.png')"><img src="/images/bg/bg2.png"
+          <a href="#" onclick="changeBg(event, 'images/bg/bg2.png')"><img src="/images/bg/bg2.png"
               alt="background option 2" /></a>
-          <a href="#" onclick="changeBg(event, '/images/bg/bg3.png')"><img src="/images/bg/bg3.png"
+          <a href="#" onclick="changeBg(event, 'images/bg/bg3.png')"><img src="/images/bg/bg3.png"
               alt="background option 3" /></a>
-          <a href="#" onclick="changeBg(event, '/images/bg/bg4.png')"><img src="/images/bg/bg4.png"
+          <a href="#" onclick="changeBg(event, 'images/bg/bg4.png')"><img src="/images/bg/bg4.png"
               alt="background option 4" /></a>
         </div>
       </div>
@@ -69,21 +69,21 @@
 
       <div id="acc" class="tabcontent">
         <div class="myGallery">
-          <a href="#" onclick="changeExtra(event, '/images/no.png')"><img src="/images/no.svg"
+          <a href="#" onclick="changeExtra(event, 'images/no.png')"><img src="/images/no.svg"
               alt="option: nothing" /></a>
-          <a href="#" onclick="changeExtra(event, '/images/extra/a0.png')"><img src="/images/extra/a0.png"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a0.png')"><img src="/images/extra/a0.png"
               alt="accessory option 0" /></a>
-          <a href="#" onclick="changeExtra(event, '/images/extra/a1.png')"><img src="/images/extra/a1.png"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a1.png')"><img src="/images/extra/a1.png"
               alt="accessory option 1" /></a>
-          <a href="#" onclick="changeExtra(event, '/images/extra/a2.png')"><img src="/images/extra/a2.png"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a2.png')"><img src="/images/extra/a2.png"
               alt="accessory option 2" /></a>
-          <a href="#" onclick="changeExtra(event, '/images/extra/a3.png')"><img src="/images/extra/a3.png"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a3.png')"><img src="/images/extra/a3.png"
               alt="accessory option 3" /></a>
-          <a href="#" onclick="changeExtra(event, '/images/extra/a4.png')"><img src="/images/extra/a4.png"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a4.png')"><img src="/images/extra/a4.png"
               alt="accessory option 4" /></a>
-          <a href="#" onclick="changeExtra(event, '/images/extra/a5.png')"><img src="/images/extra/a5.png"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a5.png')"><img src="/images/extra/a5.png"
               alt="accessory option 5" /></a>
-          <a href="#" onclick="changeExtra(event, '/images/extra/a6.png')"><img src="/images/extra/a6.png"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a6.png')"><img src="/images/extra/a6.png"
               alt="accessory option 6" /></a>
         </div>
       </div>
