--- a/public/index.html
+++ b/public/index.html
@@ -35,15 +35,15 @@
       <div id="bg" class="tabcontent">
         <div class="myGallery">
           <a href="#" onclick="changeBg(event, 'images/no.png')"><img src="/images/no.svg" alt="option: nothing" /></a>
-          <a href="#" onclick="changeBg(event, 'images/bg/bg0.png')"><img src="/images/bg/bg0.png"
+          <a href="#" onclick="changeBg(event, 'images/bg/bg0.png')"><img src="images/bg/bg0.png"
               alt="background option 0" /></a>
-          <a href="#" onclick="changeBg(event, 'images/bg/bg1.png')"><img src="/images/bg/bg1.png"
+          <a href="#" onclick="changeBg(event, 'images/bg/bg1.png')"><img src="images/bg/bg1.png"
               alt="background option 1" /></a>
-          <a href="#" onclick="changeBg(event, 'images/bg/bg2.png')"><img src="/images/bg/bg2.png"
+          <a href="#" onclick="changeBg(event, 'images/bg/bg2.png')"><img src="images/bg/bg2.png"
               alt="background option 2" /></a>
-          <a href="#" onclick="changeBg(event, 'images/bg/bg3.png')"><img src="/images/bg/bg3.png"
+          <a href="#" onclick="changeBg(event, 'images/bg/bg3.png')"><img src="images/bg/bg3.png"
               alt="background option 3" /></a>
-          <a href="#" onclick="changeBg(event, 'images/bg/bg4.png')"><img src="/images/bg/bg4.png"
+          <a href="#" onclick="changeBg(event, 'images/bg/bg4.png')"><img src="images/bg/bg4.png"
               alt="background option 4" /></a>
         </div>
       </div>
@@ -62,28 +62,28 @@
               alt="outfits option 3" /></a>
           <a href="#" onclick="changeOutfit(event, '/images/outfits/o4.png')"><img src="/images/outfits/o4.png"
               alt="outfits option 4" /></a>
-          <a href="#" onclick="changeOutfit(event, '/images/outfits/o5.png')"><img src="/images/outfits/o5.png"
+          <a href="#" onclick="changeOutfit(event, '/images/outfits/o5.png')"><img src="images/outfits/o5.png"
               alt="outfits option 5" /></a>
         </div>
       </div>
 
       <div id="acc" class="tabcontent">
         <div class="myGallery">
-          <a href="#" onclick="changeExtra(event, 'images/no.png')"><img src="/images/no.svg"
+          <a href="#" onclick="changeExtra(event, 'images/no.png')"><img src="images/no.svg"
               alt="option: nothing" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a0.png')"><img src="/images/extra/a0.png"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a0.png')"><img src="images/extra/a0.png"
               alt="accessory option 0" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a1.png')"><img src="/images/extra/a1.png"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a1.png')"><img src="images/extra/a1.png"
               alt="accessory option 1" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a2.png')"><img src="/images/extra/a2.png"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a2.png')"><img src="images/extra/a2.png"
               alt="accessory option 2" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a3.png')"><img src="/images/extra/a3.png"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a3.png')"><img src="images/extra/a3.png"
               alt="accessory option 3" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a4.png')"><img src="/images/extra/a4.png"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a4.png')"><img src="images/extra/a4.png"
               alt="accessory option 4" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a5.png')"><img src="/images/extra/a5.png"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a5.png')"><img src="images/extra/a5.png"
               alt="accessory option 5" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a6.png')"><img src="/images/extra/a6.png"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a6.png')"><img src="images/extra/a6.png"
               alt="accessory option 6" /></a>
         </div>
       </div>
@@ -92,7 +92,7 @@
     <div class="rightHalf">
       <div id="bunnyContainer0">
         <div id="bunnyContainer1">
-          <img src="/images/no.png" alt="">
+          <img src="images/no.png" alt="">
         </div>
         <div><img src="images/no.png" id="bgImg"></div>
         <div><img src="images/bunny.png" id="bunnyImg"></div>
