--- a/public/index.html
+++ b/public/index.html
@@ -34,56 +34,56 @@
 
       <div id="bg" class="tabcontent">
         <div class="myGallery">
-          <a href="#" onclick="changeBg(event, 'images/no.PNG')"><img src="/images/no.svg" alt="option: nothing" /></a>
-          <a href="#" onclick="changeBg(event, 'images/bg/bg0.PNG')"><img src="images/bg/bg0.PNG"
+          <a href="#" onclick="changeBg(event, 'images/no.png')"><img src="/images/no.svg" alt="option: nothing" /></a>
+          <a href="#" onclick="changeBg(event, 'images/bg/bg0.png')"><img src="images/bg/bg0.png"
               alt="background option 0" /></a>
-          <a href="#" onclick="changeBg(event, 'images/bg/bg1.PNG')"><img src="images/bg/bg1.PNG"
+          <a href="#" onclick="changeBg(event, 'images/bg/bg1.png')"><img src="images/bg/bg1.png"
               alt="background option 1" /></a>
-          <a href="#" onclick="changeBg(event, 'images/bg/bg2.PNG')"><img src="images/bg/bg2.PNG"
+          <a href="#" onclick="changeBg(event, 'images/bg/bg2.png')"><img src="images/bg/bg2.png"
               alt="background option 2" /></a>
-          <a href="#" onclick="changeBg(event, 'images/bg/bg3.PNG')"><img src="images/bg/bg3.PNG"
+          <a href="#" onclick="changeBg(event, 'images/bg/bg3.png')"><img src="images/bg/bg3.png"
               alt="background option 3" /></a>
-          <a href="#" onclick="changeBg(event, 'images/bg/bg4.PNG')"><img src="images/bg/bg4.PNG"
+          <a href="#" onclick="changeBg(event, 'images/bg/bg4.png')"><img src="images/bg/bg4.png"
               alt="background option 4" /></a>
         </div>
       </div>
 
       <div id="outfit" class="tabcontent">
         <div class="myGallery" id="outfitGallery">
-          <a href="#" onclick="changeOutfit(event, 'images/no.PNG')"><img src="/images/no.svg"
+          <a href="#" onclick="changeOutfit(event, 'images/no.png')"><img src="/images/no.svg"
               alt="option: nothing" /></a>
-          <a href="#" onclick="changeOutfit(event, 'images/outfits/o0.PNG')"><img src="/images/outfits/o0.PNG"
+          <a href="#" onclick="changeOutfit(event, 'images/outfits/o0.png')"><img src="/images/outfits/o0.png"
               alt="outfits option 0" /></a>
-          <a href="#" onclick="changeOutfit(event, 'images/outfits/o1.PNG')"><img src="/images/outfits/o1.PNG"
+          <a href="#" onclick="changeOutfit(event, 'images/outfits/o1.png')"><img src="/images/outfits/o1.png"
               alt="outfits option 1" /></a>
-          <a href="#" onclick="changeOutfit(event, 'images/outfits/o2.PNG')"><img src="/images/outfits/o2.PNG"
+          <a href="#" onclick="changeOutfit(event, 'images/outfits/o2.png')"><img src="/images/outfits/o2.png"
               alt="outfits option 2" /></a>
-          <a href="#" onclick="changeOutfit(event, 'images/outfits/o3.PNG')"><img src="/images/outfits/o3.PNG"
+          <a href="#" onclick="changeOutfit(event, 'images/outfits/o3.png')"><img src="/images/outfits/o3.png"
               alt="outfits option 3" /></a>
-          <a href="#" onclick="changeOutfit(event, 'images/outfits/o4.PNG')"><img src="/images/outfits/o4.PNG"
+          <a href="#" onclick="changeOutfit(event, 'images/outfits/o4.png')"><img src="/images/outfits/o4.png"
               alt="outfits option 4" /></a>
-          <a href="#" onclick="changeOutfit(event, 'images/outfits/o5.PNG')"><img src="images/outfits/o5.PNG"
+          <a href="#" onclick="changeOutfit(event, 'images/outfits/o5.png')"><img src="images/outfits/o5.png"
               alt="outfits option 5" /></a>
         </div>
       </div>
 
       <div id="acc" class="tabcontent">
         <div class="myGallery">
-          <a href="#" onclick="changeExtra(event, 'images/no.PNG')"><img src="images/no.svg"
+          <a href="#" onclick="changeExtra(event, 'images/no.png')"><img src="images/no.svg"
               alt="option: nothing" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a0.PNG')"><img src="images/extra/a0.PNG"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a0.png')"><img src="images/extra/a0.png"
               alt="accessory option 0" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a1.PNG')"><img src="images/extra/a1.PNG"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a1.png')"><img src="images/extra/a1.png"
               alt="accessory option 1" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a2.PNG')"><img src="images/extra/a2.PNG"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a2.png')"><img src="images/extra/a2.png"
               alt="accessory option 2" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a3.PNG')"><img src="images/extra/a3.PNG"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a3.png')"><img src="images/extra/a3.png"
               alt="accessory option 3" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a4.PNG')"><img src="images/extra/a4.PNG"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a4.png')"><img src="images/extra/a4.png"
               alt="accessory option 4" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a5.PNG')"><img src="images/extra/a5.PNG"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a5.png')"><img src="images/extra/a5.png"
               alt="accessory option 5" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a6.PNG')"><img src="images/extra/a6.PNG"
+          <a href="#" onclick="changeExtra(event, 'images/extra/a6.png')"><img src="images/extra/a6.png"
               alt="accessory option 6" /></a>
         </div>
       </div>
@@ -92,12 +92,12 @@
     <div class="rightHalf">
       <div id="bunnyContainer0">
         <div id="bunnyContainer1">
-          <img src="images/no.PNG" alt="">
+          <img src="images/no.png" alt="">
         </div>
-        <div><img src="images/no.PNG" id="bgImg"></div>
-        <div><img src="images/bunny.PNG" id="bunnyImg"></div>
-        <div><img src="images/no.PNG" id="outfitImg"></div>
-        <div><img src="images/no.PNG" id="extraImg"></div>
+        <div><img src="images/no.png" id="bgImg"></div>
+        <div><img src="images/bunny.png" id="bunnyImg"></div>
+        <div><img src="images/no.png" id="outfitImg"></div>
+        <div><img src="images/no.png" id="extraImg"></div>
       </div>
     
       <div id="loadContainer">
