--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,13 @@
     <div class="leftHalf">
       <ul class="tab">
         <li><a href="#" class="tablinks" onclick="openCity(event, 'bg')">
-            <img src="images/icons/background.svg" alt="Backgrounds">
+            <img src="./images/icons/background.svg" alt="Backgrounds">
           </a></li>
         <li><a href="#" class="tablinks" onclick="openCity(event, 'outfit')">
-            <img src="images/icons/outfit.svg" alt="Outfits">
+            <img src="./images/icons/outfit.svg" alt="Outfits">
           </a></li>
         <li><a href="#" class="tablinks" onclick="openCity(event, 'acc')">
-            <img src="images/icons/extra.svg" alt="Accessories">
+            <img src="./images/icons/extra.svg" alt="Accessories">
           </a></li>
       </ul>
 
