--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
       <div id="bg" class="tabcontent">
         <div class="myGallery">
-          <a href="#" onclick="changeBg(event, 'images/no.png')"><img src="/images/no.svg" alt="option: nothing" /></a>
+          <a href="#" onclick="changeBg(event, 'images/no.png')"><img src="images/no.svg" alt="option: nothing" /></a>
           <a href="#" onclick="changeBg(event, 'images/bg/bg0.png')"><img src="images/bg/bg0.png"
               alt="background option 0" /></a>
           <a href="#" onclick="changeBg(event, 'images/bg/bg1.png')"><img src="images/bg/bg1.png"
@@ -50,17 +50,17 @@
 
       <div id="outfit" class="tabcontent">
         <div class="myGallery" id="outfitGallery">
-          <a href="#" onclick="changeOutfit(event, 'images/no.png')"><img src="/images/no.svg"
+          <a href="#" onclick="changeOutfit(event, 'images/no.png')"><img src="images/no.svg"
               alt="option: nothing" /></a>
-          <a href="#" onclick="changeOutfit(event, 'images/outfits/o0.png')"><img src="/images/outfits/o0.png"
+          <a href="#" onclick="changeOutfit(event, 'images/outfits/o0.png')"><img src="images/outfits/o0.png"
               alt="outfits option 0" /></a>
-          <a href="#" onclick="changeOutfit(event, 'images/outfits/o1.png')"><img src="/images/outfits/o1.png"
+          <a href="#" onclick="changeOutfit(event, 'images/outfits/o1.png')"><img src="images/outfits/o1.png"
               alt="outfits option 1" /></a>
-          <a href="#" onclick="changeOutfit(event, 'images/outfits/o2.png')"><img src="/images/outfits/o2.png"
+          <a href="#" onclick="changeOutfit(event, 'images/outfits/o2.png')"><img src="images/outfits/o2.png"
               alt="outfits option 2" /></a>
-          <a href="#" onclick="changeOutfit(event, 'images/outfits/o3.png')"><img src="/images/outfits/o3.png"
+          <a href="#" onclick="changeOutfit(event, 'images/outfits/o3.png')"><img src="images/outfits/o3.png"
               alt="outfits option 3" /></a>
-          <a href="#" onclick="changeOutfit(event, 'images/outfits/o4.png')"><img src="/images/outfits/o4.png"
+          <a href="#" onclick="changeOutfit(event, 'images/outfits/o4.png')"><img src="images/outfits/o4.png"
               alt="outfits option 4" /></a>
           <a href="#" onclick="changeOutfit(event, 'images/outfits/o5.png')"><img src="images/outfits/o5.png"
               alt="outfits option 5" /></a>
@@ -103,7 +103,7 @@
       <div id="loadContainer">
         <h3>My Closet</h3>
         <div id="closetContainer">
-          <button>click here to save outfit</button>
+          <button>1 - click here to save outfit</button>
           <button>click here to save outfit</button>
           <button>click here to save outfit</button>
         </div>
