--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <!-- This line provides automatic page and style reloading when files change -->
   <script type="module" src="/lib/client/updater.js"></script>
+
+  <script type="module" src="/js/index.js"></script>
+
 </head>
 
 <body>
