--- a/public/index.html
+++ b/public/index.html
@@ -37,57 +37,52 @@
 
       <div id="bg" class="tabcontent">
         <div class="myGallery">
-          <a href="#" onclick="changeBg(event, 'images/no.png')"><img src="images/no.svg" alt="option: nothing" /></a>
-          <a href="#" onclick="changeBg(event, 'images/bg/bg0.png')"><img src="images/bg/bg0.png"
-              alt="background option 0" /></a>
-          <a href="#" onclick="changeBg(event, 'images/bg/bg1.png')"><img src="images/bg/bg1.png"
-              alt="background option 1" /></a>
-          <a href="#" onclick="changeBg(event, 'images/bg/bg2.png')"><img src="images/bg/bg2.png"
-              alt="background option 2" /></a>
-          <a href="#" onclick="changeBg(event, 'images/bg/bg3.png')"><img src="images/bg/bg3.png"
-              alt="background option 3" /></a>
-          <a href="#" onclick="changeBg(event, 'images/bg/bg4.png')"><img src="images/bg/bg4.png"
-              alt="background option 4" /></a>
+          <button><img src="images/no.svg" alt="option: nothing" class="bgBttn" id="bgNone" /></button>
+          <button><img src="images/bg/bg0.png" alt="background option 0" class="bgBttn" id="bg0"/></button>
+          <button><img src="images/bg/bg1.png" alt="background option 1" class="bgBttn" id="bg1"/></button>
+          <button><img src="images/bg/bg2.png" alt="background option 2" class="bgBttn" id="bg2"/></button>
+          <button><img src="images/bg/bg3.png" alt="background option 3" class="bgBttn" id="bg3"/></button>
+          <button><img src="images/bg/bg4.png" alt="background option 4" class="bgBttn" id="bg4"/></button>
         </div>
       </div>
 
       <div id="outfit" class="tabcontent">
-        <div class="myGallery" id="outfitGallery">
-          <a href="#" onclick="changeOutfit(event, 'images/no.png')"><img src="images/no.svg"
-              alt="option: nothing" /></a>
-          <a href="#" onclick="changeOutfit(event, 'images/outfits/o0.png')"><img src="images/outfits/o0.png"
-              alt="outfits option 0" /></a>
-          <a href="#" onclick="changeOutfit(event, 'images/outfits/o1.png')"><img src="images/outfits/o1.png"
-              alt="outfits option 1" /></a>
-          <a href="#" onclick="changeOutfit(event, 'images/outfits/o2.png')"><img src="images/outfits/o2.png"
-              alt="outfits option 2" /></a>
-          <a href="#" onclick="changeOutfit(event, 'images/outfits/o3.png')"><img src="images/outfits/o3.png"
-              alt="outfits option 3" /></a>
-          <a href="#" onclick="changeOutfit(event, 'images/outfits/o4.png')"><img src="images/outfits/o4.png"
-              alt="outfits option 4" /></a>
-          <a href="#" onclick="changeOutfit(event, 'images/outfits/o5.png')"><img src="images/outfits/o5.png"
-              alt="outfits option 5" /></a>
+        <div class="myGallery" id="clothesGallery">
+          <button onclick="changeClothes(event, 'images/no.png')"><img src="images/no.svg"
+              alt="option: nothing" /></button>
+          <button onclick="changeClothes(event, 'images/clothes/o0.png')"><img src="images/clothes/o0.png"
+              alt="outfits option 0" /></button>
+          <button onclick="changeClothes(event, 'images/clothes/o1.png')"><img src="images/clothes/o1.png"
+              alt="outfits option 1" /></button>
+          <button onclick="changeClothes(event, 'images/clothes/o2.png')"><img src="images/clothes/o2.png"
+              alt="outfits option 2" /></button>
+          <button onclick="changeClothes(event, 'images/clothes/o3.png')"><img src="images/clothes/o3.png"
+              alt="outfits option 3" /></button>
+          <button onclick="changeClothes(event, 'images/clothes/o4.png')"><img src="images/clothes/o4.png"
+              alt="outfits option 4" /></button>
+          <button onclick="changeClothes(event, 'images/clothes/o5.png')"><img src="images/clothes/o5.png"
+              alt="outfits option 5" /></button>
         </div>
       </div>
 
       <div id="acc" class="tabcontent">
         <div class="myGallery">
-          <a href="#" onclick="changeExtra(event, 'images/no.png')"><img src="images/no.svg"
-              alt="option: nothing" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a0.png')"><img src="images/extra/a0.png"
-              alt="accessory option 0" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a1.png')"><img src="images/extra/a1.png"
-              alt="accessory option 1" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a2.png')"><img src="images/extra/a2.png"
-              alt="accessory option 2" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a3.png')"><img src="images/extra/a3.png"
-              alt="accessory option 3" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a4.png')"><img src="images/extra/a4.png"
-              alt="accessory option 4" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a5.png')"><img src="images/extra/a5.png"
-              alt="accessory option 5" /></a>
-          <a href="#" onclick="changeExtra(event, 'images/extra/a6.png')"><img src="images/extra/a6.png"
-              alt="accessory option 6" /></a>
+          <button onclick="changeExtra(event, CLOSET)"><img src="images/no.svg"
+              alt="option: nothing" /></button>
+          <button onclick="changeExtra(event, 'images/extra/a0.png')"><img src="images/extra/a0.png"
+              alt="accessory option 0" /></button>
+          <button onclick="changeExtra(event, 'images/extra/a1.png')"><img src="images/extra/a1.png"
+              alt="accessory option 1" /></button>
+          <button onclick="changeExtra(event, 'images/extra/a2.png')"><img src="images/extra/a2.png"
+              alt="accessory option 2" /></button>
+          <button onclick="changeExtra(event, 'images/extra/a3.png')"><img src="images/extra/a3.png"
+              alt="accessory option 3" /></button>
+          <button onclick="changeExtra(event, 'images/extra/a4.png')"><img src="images/extra/a4.png"
+              alt="accessory option 4" /></button>
+          <button onclick="changeExtra(event, 'images/extra/a5.png')"><img src="images/extra/a5.png"
+              alt="accessory option 5" /></button>
+          <button onclick="changeExtra(event, 'images/extra/a6.png')"><img src="images/extra/a6.png"
+              alt="accessory option 6" /></button>
         </div>
       </div>
     </div>
@@ -105,13 +100,13 @@
 
       <div id="loadContainer">
         <h3>My Closet</h3>
-        <div id="g_id_onload" data-client_id="297076872738-tpnj678k0m7690tqfu04n6pk75s3osrj.apps.googleusercontent.com"
+        <!-- <div id="g_id_onload" data-client_id="297076872738-tpnj678k0m7690tqfu04n6pk75s3osrj.apps.googleusercontent.com"
           data-context="signin" data-ux_mode="popup" data-callback="handleLogin" data-auto_prompt="false">
         </div>
 
         <div class="g_id_signin" data-type="standard" data-shape="pill" data-theme="outline" data-text="signin_with"
           data-size="large" data-logo_alignment="left">
-        </div>
+        </div> -->
 
         <!-- <div id="closetContainer">
           <button>click here to save outfit</button>
@@ -140,16 +135,9 @@
       evt.currentTarget.className += " active";
     }
 
-    function changeBg(event, bgSrc) {
+    function changeClothes(event, imgSrc) {
       event.preventDefault();
-      console.log("inside function changebg");
-      var bgImg = document.getElementById("bgImg");
-      bgImg.src = bgSrc;
-    }
-
-    function changeOutfit(event, imgSrc) {
-      event.preventDefault();
-      console.log("inside function changeoutfit");
+      console.log("inside function changeClothes");
       var imgElem = document.getElementById("outfitImg");
       imgElem.src = imgSrc;
     }
